# mesh_agent_shared_knowledge

./: AGENTS.md  Cargo.toml  README.md
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-07.jsonl  omx-2026-04-07.jsonl  session-history.jsonl  tmux-hook-2026-04-07.jsonl  turns-2026-04-07.jsonl
.omx/state/: auto-nudge-state.json  hud-state.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  notify-hook-state.json  session.json  tmux-hook-state.json  update-check.json
.omx/state/sessions/omx-1775570736495-tky5be/: AGENTS.md
.omx/state/tmux-extended-keys/: private-tmp-tmux-501-default.json
docs/: SPEC.md
docs/superpowers/plans/: 2026-04-07-mask-mvp.md
scripts/: install.sh
src/: cli.rs  indexer.rs  main.rs  output.rs  server.rs
tests/: e2e_contract.rs
